# uv-mirror

./: README.md  pyproject.toml  uv-index.py
src/uv_mirror/: cli.py
