[project]
name = "uv-mirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.2",
    "tomlkit>=0.13.2",
    "typer>=0.15.3",
    "click>=8.0, <8.2.0",
    "rich>=14.0.0",
]

[project.scripts]
uv-mirror = "uv_mirror.cli:app"

[tool.uv]
package = true
