[project]
name = "uv-mirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.0.0",
    "tomlkit>=0.13.2",
    "typer>=0.16.0",
]

[project.scripts]
uv-mirror = "uv_mirror.cli:app"

[tool.uv]
package = true
